ChatGPT openai 적용후 testing...
